misc/istio-system/api-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: master
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "api/api.sogeor.com"
        - "misc/*.sogeor.com"
        - "nexus/nexus.sogeor.com"
        - "service/service.sogeor.com"
        - "sso/sso.sogeor.com"
        - "web/sogeor.com"
      tls:
        mode: SIMPLE
        credentialName: master-tls
